# numerary

./: .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
.github/workflows/: on-push.yaml  unit-tests.yaml
0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0/contrib/: index.html
0.0/license/: index.html
0.0/notes/: index.html
0.0/numerary/: index.html
0.0/numerary.types/: index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html  objects.inv  perf_rational_big_protocol.ipy  perf_rational_big_protocol.out  perf_rational_protocol.ipy  perf_supports_complex.out  sitemap.xml
0.1/contrib/: index.html
0.1/license/: index.html
0.1/notes/: index.html
0.1/numerary/: index.html
0.1/numerary.types/: index.html
0.1/search/: search_index.json
0.1/whytho/: index.html
0.2/: 404.html  index.html  perf_rational_baseline.ipy  perf_rational_protocol.txt  sitemap.xml
0.2/contrib/: index.html
0.2/license/: index.html
0.2/notes/: index.html
0.2/numerary/: index.html
0.2/numerary.types/: index.html
0.2/search/: search_index.json
0.2/whytho/: index.html
0.3/: 404.html  index.html  objects.inv  perf_rational_baseline.txt  perf_rational_big_protocol.txt  sitemap.xml
0.3/contrib/: index.html
0.3/license/: index.html
0.3/notes/: index.html
0.3/numerary/: index.html
0.3/numerary.types/: index.html
0.3/search/: search_index.json
0.3/whytho/: index.html
0.4/: 404.html  index.html  objects.inv  perf_rational_big_protocol.ipy  perf_rational_big_protocol.txt  perf_rational_protocol.ipy  perf_supports_complex.txt  sitemap.xml
0.4/contrib/: index.html
0.4/license/: index.html
0.4/notes/: index.html
0.4/numerary/: index.html
0.4/numerary.protocol/: index.html
0.4/numerary.types/: index.html
0.4/search/: search_index.json
0.4/whytho/: index.html
docs/: Makefile  contrib.md  index.md  notes.md  numerary.md  numerary.protocol.md  numerary.types.md  perf_rational_baseline.ipy  perf_rational_baseline.out  perf_rational_baseline.txt  perf_rational_big_protocol.ipy  perf_rational_big_protocol.out  perf_rational_big_protocol.txt  perf_rational_protocol.ipy  perf_rational_protocol.out  perf_rational_protocol.txt  perf_supports_complex.ipy  perf_supports_complex.txt  whytho.md
docs/js/: site.js
helpers/: ci-vars.sh  mypy-doctests.py  propagate-version.sh  release-checklist.md
latest/contrib/: index.html
latest/license/: index.html
latest/notes/: index.html
latest/numerary/: index.html
latest/numerary.protocol/: index.html
latest/numerary.types/: index.html
latest/whytho/: index.html
numerary/: __init__.py  _protocol.py  bt.py  protocol.py  types.py  version.py
tests/: numberwang.py  test_integral_like.py  test_num.py  test_rational_like.py  test_real_like.py  test_supports_complex_ops_pow.py  test_supports_conjugate.py  test_supports_divmod.py  test_supports_floor_ceil.py  test_supports_integral_ops_pow.py  test_supports_numerator_denominator.py  test_supports_real_imag.py  test_supports_real_ops.py  test_supports_trunc.py  test_types.py
