# ======================================================================================
# Copyright and other protections apply. Please see the accompanying LICENSE file for
# rights and restrictions governing use of this software. All rights not expressly
# waived or licensed are reserved. If that file is missing or appears to be modified
# from its original, then please contact the author before viewing or using this
# software in any capacity.
# ======================================================================================

[build-system]  # ----------------------------------------------------------------------

requires = ["setuptools>=45", "versioningit~=2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.versioningit.next-version]  # ----------------------------------------------------

method = "smallest-release"

[tool.versioningit.vcs]  # -------------------------------------------------------------

default-tag = "0.0.0"

[tool.versioningit.write]  # -----------------------------------------------------------

file = "numerary/_version.py"
template = '''__vers_str__ = "{version}"
__version__ = {version_tuple}
'''

[tool.mypy]  # -------------------------------------------------------------------------

check_untyped_defs = true
# See <https://mypy.readthedocs.io/en/stable/config_file.html#confval-exclude>
exclude = '''(?x)(
  ^build/
  | /build/
)'''
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
# warn_unused_ignores = true

[tool.pytest.ini_options]  # -----------------------------------------------------------

addopts = "--doctest-continue-on-failure --doctest-glob='*.md' --doctest-modules --pythonwarnings=ignore"
doctest_optionflags = [
  "ELLIPSIS",
  "IGNORE_EXCEPTION_DETAIL",
  "NORMALIZE_WHITESPACE",
  "NUMBER",
]
